# CompilerDesign

./: .gitignore  README.md
Assignment_2/: README.md  makefile  testing.txt
Assignment_2/src/: lexbuffer.cpp  lexbuffer.h  scanner.cpp  tokenizer.cpp  tokenizer.h
Assignment_3/: README.md  makefile  out.txt  parser.exe.stackdump  test.pas  test.txt
Assignment_3/src/: lexbuffer.cpp  lexbuffer.h  node.cpp  node.h  parser.cpp  parser.h  symbolTable.cpp  symbolTable.h  tokenizer.cpp  tokenizer.h  tokenstream.cpp  tokenstream.h
Assignment_4/: CMakeLists.txt  build.sh  readme.txt
Assignment_4/antlr_gen/: ExprBaseVisitor.cpp  ExprLexer.cpp  ExprParser.cpp  ExprVisitor.cpp
Assignment_4/antlr_gen/src/: Expr.interp  Expr.tokens  ExprBaseVisitor.h  ExprLexer.cpp  ExprLexer.h  ExprLexer.interp  ExprLexer.tokens  ExprParser.cpp  ExprParser.h  ExprVisitor.h
Assignment_4/src/: Expr.g4  ExprMain.cpp
Assignment_5/: readme.txt
Assignment_5/src/: ExprMain.cpp
Assignment_6/: input.pas  main  makefile
Assignment_6/frontend/: Semantics.h
Assignment_6/src/: ExprMain.cpp  Pascal.g4  tableBuilder.cpp  tableBuilder.h  treePrint.cpp  treePrint.h
Assignment_7/: Fact.asm  TESTNAME.asm  function1.j  makefile  readme.txt  simple.pas  testprogram.pas
Assignment_7/src/: ErrorHandler.h  ExprMain.cpp  tableBuilder.h  treePrint.cpp
Assignment_7/src/backend/: CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Directive.h  ExpressionGenerator.cpp  ExpressionGenerator.h  Label.h  LocalStack.h  LocalVariables.h  ProgramGenerator.cpp  ProgramGenerator.h  StatementGenerator.cpp  StatementGenerator.h  StructuredDataGenerator.cpp
